# devops-ai-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SESSION-LOG.md  cdk.json  combined-permissions.json  demo.py  policy.json  pyproject.toml  requirements-lambda.txt  requirements.txt  setup.ps1  setup.sh  test_event.json  validate_setup.py
.github/workflows/: ci.yml
cms/: pyvenv.cfg
deploy_agent/: .bedrock_agentcore.yaml  Dockerfile  agent.py  permissions-policy.json  requirements.txt  setup_infra.py  sigv4_auth.py
deploy_aws_infra/: .bedrock_agentcore.yaml  Dockerfile  README.md  mcp_server.py  permissions-policy.json  tools.py
deploy_monitoring/: .bedrock_agentcore.yaml  Dockerfile  monitoring_server.py  permissions-policy.json
deploy_sns/: .bedrock_agentcore.yaml  Dockerfile  approval_handler.py  permissions-policy.json  sns_server.py  tools.py
deploy_teams/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  mcp_server.py  teams_webhook.py  tools.py
deployments/agent/: .bedrock_agentcore.yaml  .dockerignore  agent.py  ecr-policy.json  permissions-policy.json
deployments/mcp_servers/aws_infra/: mcp_server.py  tools.py
deployments/mcp_servers/monitoring/: requirements.txt  tools.py
deployments/mcp_servers/sns/: .bedrock_agentcore.yaml  Dockerfile  approval_handler.py  aws_helpers.py  permissions-policy.json  requirements.txt  tools.py
deployments/mcp_servers/teams/: .bedrock_agentcore.yaml  Dockerfile
docs/: AGENT-CONTEXT.md  HANDOFF.md  README.md  agent_core_changes.md.resolved  architecture-diagram.md  aws_integrations_guide.md.resolved  code-workflow-example.md  deployment-guide.md  devops-agent-walkthrough.md  high-level-architecture.md  todo.md  tools.md
infra/: app.py
infra/stacks/: __init__.py  agent_runner_stack.py  monitoring_stack.py  networking_stack.py
scripts/: _register_targets_v3.py  _version.py  check_gateway_role.py  check_logs.py  check_logs2.py  check_logs3.py  check_logs4.py  create_gateway_v2.py  demo.py  deploy_agent.py  deploy_approval_handler.py  deploy_mcp_servers.py  explore_agent_api.py  fix_aud.py  fix_auth_and_reregister.py  fix_final.py  inspect_runtimes.py  redeploy_runtimes.py  register_aws_infra_target.py  register_gateway_targets.py  retry_aws_infra.py  retry_aws_infra2.py  setup_cognito.ps1  setup_cognito_and_register_targets.py  sync_gateway.py  test_agent.py  test_automation.py  test_remediation.py  test_runtime_direct.py  test_runtime_direct2.py  update_gateway_auth.py  update_runtime_auth.py  update_runtime_auth_v2.py  verify_auth.py
scripts/lib/: __init__.py  aws.py  config.py  console.py  docker.py  gateway.py  runtime.py  version.py
src/agent/: agent_core.py  config.py  system_prompt.py
src/handlers/: event_parser.py  lambda_handler.py
src/mcp_client/: client.py  gateway.py  test.py
src/mcp_servers/aws_infra/: __init__.py  server.py  tools.py
src/mcp_servers/monitoring/: __init__.py  server.py  tools.py
src/mcp_servers/sns/: __init__.py  server.py  tools.py
src/mcp_servers/teams/: __init__.py  server.py  tools.py
src/utils/: aws_helpers.py  teams_webhook.py
tests/: conftest.py  test_event.json
tests/integration/: test_mcp_round_trip.py
tests/mocks/: mock_responses.py
tests/unit/: test_aws_infra_tools.py  test_event_parser.py  test_monitoring_tools.py  test_teams_tools.py
web/: agent.py  app.py  routes.py
web/templates/: audit_log.html  base.html  chat.html  dashboard.html
