[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "tests"]

[project]
name = "devops-ai-agent"
version = "0.1.0"
description = "A DevOps AI Agent built on AgentCore that uses MCP servers to manage AWS infrastructure, monitor resources, and report via Teams."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DevOps Team" }]

dependencies = [
    "boto3>=1.35.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "moto[ec2,cloudwatch]>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "boto3-stubs[ec2,cloudwatch]>=1.35.0",
    "commitizen>=4.0.0",
    "pre-commit>=4.0.0",
]
infra = [
    "aws-cdk-lib>=2.150.0",
    "constructs>=10.3.0",
]

[project.scripts]
mcp-aws-infra = "src.mcp_servers.aws_infra.server:main"
mcp-monitoring = "src.mcp_servers.monitoring.server:main"
mcp-teams = "src.mcp_servers.teams.server:main"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (deselect with '-m \"not unit\"')",
    "integration: Integration tests (deselect with '-m \"not integration\"')",
]

# ---------------------------------------------------------------------------
# Commitizen – conventional commits & changelog
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}"
schema = "<type>(<scope>): <message>"
schema_pattern = "(feat|fix|refactor|docs|test|ci|build|chore|perf|style|revert)(\\(\\S+\\))?:\\s.*"
bump_pattern = "^(feat|fix|refactor|perf)"
bump_map = { feat = "MINOR", fix = "PATCH", refactor = "PATCH", perf = "PATCH" }
change_type_order = ["feat", "fix", "refactor", "perf", "docs", "test", "ci", "build", "chore", "style", "revert"]
info = "Conventional Commits: https://www.conventionalcommits.org/"
commit_parser = "^(?P<change_type>feat|fix|refactor|docs|test|ci|build|chore|perf|style|revert)(?:\\((?P<scope>[^)]+)\\))?:\\s(?P<message>.+)"
changelog_pattern = "^(feat|fix|refactor|perf|docs|test|ci|build|chore|style|revert)"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "🔀 Select the type of change:\n"
choices = [
    { value = "feat",     name = "✨ feat:     A new feature" },
    { value = "fix",      name = "🐛 fix:      A bug fix" },
    { value = "refactor", name = "♻️  refactor: Code restructuring (no feature/fix)" },
    { value = "docs",     name = "📝 docs:     Documentation only" },
    { value = "test",     name = "✅ test:     Adding or updating tests" },
    { value = "ci",       name = "👷 ci:       CI/CD pipeline changes" },
    { value = "build",    name = "📦 build:    Build system or dependencies" },
    { value = "chore",    name = "🔧 chore:    Maintenance (no prod code change)" },
    { value = "perf",     name = "⚡ perf:     Performance improvement" },
    { value = "style",    name = "🎨 style:    Formatting, whitespace, etc." },
    { value = "revert",   name = "⏪ revert:   Revert a previous commit" },
]

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
message = "📂 Scope (area of change):\n"
choices = [
    { value = "",       name = "⏭️  (none)  — skip scope" },
    { value = "agent",  name = "🤖 agent  — agent core / system prompt" },
    { value = "mcp",    name = "🔌 mcp    — MCP servers & client" },
    { value = "infra",  name = "☁️  infra  — CDK stacks & cloud infra" },
    { value = "web",    name = "🌐 web    — Flask UI & routes" },
    { value = "tests",  name = "🧪 tests  — test suite" },
    { value = "ci",     name = "👷 ci     — GitHub Actions / CI pipeline" },
    { value = "deps",   name = "📦 deps   — dependency updates" },
    { value = "stack",  name = "🏗️  stack  — Full application stack" },
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "✏️  Short description (imperative, lowercase, no period):\n"
